Fixed alignment and formatting of the datestamp.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -493,9 +493,6 @@ footer p {
   margin-top: 0;
   padding-bottom: 0.25em;
 }
-/* .article article footer p {
-  text-align: center;
-} */
 .article article header .project-header-logo {
   padding-bottom: 4em;
 }
